added models case and change type in sql

--- a/pgdata/pg_hba.conf
+++ b/pgdata/pg_hba.conf
@@ -78,7 +78,7 @@
 
 # CAUTION: Configuring the system for local "trust" authentication
 # allows any local user to connect as any PostgreSQL user, including
-# the database superuser.  If you do not trust all your local users,
+# the database superuser.  If you do not trust all your local user,
 # use another authentication method.
 
 
