--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,20 +25,19 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
       - run: |
-          cd 04_JAD/Todolist
+          cd linkMart
           ./gradlew clean test bootJar --refresh-dependencies
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }} ask kenneth
-          password: ${{ secrets.DOCKERHUB_TOKEN }} ask kenneth
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Docker Build and Push
         run: |
           ls -la
           pwd
-          cd 04_JAD/Todolist (the big filename)
-          docker build -t jamesteckyio/c28jad:latest . (docker image name)
-          docker push jamesteckyio/c28jad:latest  (docker image name)
+          docker build -t vinci33/jadc28:latest .
+          docker push vinci33/jadc28:latest
   # deploy-server:
   #   needs: test-and-build-dockerize-server
   #   runs-on: ubuntu-latest
