--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,18 +30,18 @@ jobs:
           pwd
           docker build -t vinci33/jadc28:latest .
           docker push vinci33/jadc28:latest
-  # deploy-server:
-  #   needs: test-and-build-dockerize-server
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Executing remote ssh
-  #       uses: appleboy/ssh-action@master
-  #       with:
-  #         host: jad.jameslam.me (own domain)
-  #         key: ${{ secrets.SSH_PRIVATE_KEY }}
-  #         username: ubuntu
-  #         script: |
-  #           cd docker
-  #           sudo docker compose pull
-  #           sudo docker compose up -d
-  #           sudo docker image prune -f 
+  deploy-server:
+     needs: test-and-build-dockerize-server
+     runs-on: ubuntu-latest
+     steps:
+       - name: Executing remote ssh
+         uses: appleboy/ssh-action@master
+         with:
+           host: api.fight2gether.com
+           key: ${{ secrets.SSH_PRIVATE_KEY }}
+           username: ubuntu
+           script: |
+             cd docker
+             sudo docker compose pull
+             sudo docker compose up -d
+             sudo docker image prune -f
