--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.484'
     implementation 'at.favre.lib:bcrypt:0.10.2'
+    implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 test {
