--- a/build.gradle
+++ b/build.gradle
@@ -8,18 +8,19 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version "${springBootVersion}"
     id "org.flywaydb.flyway" version "9.8.1"
+//    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
 }
 
 group = 'com.linkmart'
 version = '1.0-SNAPSHOT'
 
+
+
 repositories {
     mavenCentral()
 }
 
-tasks.bootJar {
-    archiveFileName.set("api.linkmart.jar")
-}
+
 dependencies {
     implementation platform("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -36,13 +37,27 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
     implementation 'com.amazonaws:aws-java-sdk-s3:1.12.484'
     implementation 'at.favre.lib:bcrypt:0.10.2'
-    implementation 'org.apache.logging.log4j:log4j-core:2.14.1'
+    implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
     implementation 'com.google.code.gson:gson:2.10.1'
+//    implementation 'com.querydsl:querydsl-jpa:4.4.0'
+//    implementation 'com.querydsl:querydsl-apt:4.4.0:jpa'
+//    annotationProcessor 'com.querydsl:querydsl-apt:4.4.0:jpa'
+//    annotationProcessor 'com.querydsl:querydsl-jpa:4.4.0'
+
 }
 
 test {
     useJUnitPlatform()
 }
+//
+//querydsl {
+//    jpa = true
+//    querydslSourcesDir = "$buildDir/generated/querydsl"
+//}
+
+//sourceSets {
+//    main.java.srcDir "$buildDir/generated/querydsl"
+//}
 
 tasks.bootJar {
     archiveFileName.set("api.linkmart.jar")
