--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     implementation 'at.favre.lib:bcrypt:0.10.2'
     implementation 'org.apache.logging.log4j:log4j-core:2.17.1'
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'org.springframework:spring-webmvc:5.3.12'
+
 //    implementation 'com.querydsl:querydsl-jpa:4.4.0'
 //    implementation 'com.querydsl:querydsl-apt:4.4.0:jpa'
 //    annotationProcessor 'com.querydsl:querydsl-apt:4.4.0:jpa'
